# micu-ninja

./: README.md
cmake_examples/using_target_property/: CMakeLists.txt  README.md  main.cpp
cmake_examples/using_target_property/apps/: CMakeLists.txt
cmake_examples/using_target_property/apps/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
cmake_examples/using_target_property/apps/mp3player/: CMakeLists.txt  Mp3Player.cpp  Mp3Player.hpp
cmake_examples/using_target_property/ext-hw/: CMakeLists.txt
cmake_examples/using_target_property/ext-hw/charger/: MicroUSB.cpp  MicroUSB.hpp
cmake_examples/using_target_property/ext-hw/headset/: Jack.cpp  Jack.hpp
cmake_examples/using_target_property/hw/: Battery.cpp  Battery.hpp  CMakeLists.txt
cmake_examples/using_target_property/os/: CMakeLists.txt  NinDroid.cpp  NinDroid.hpp
cmake_examples/using_target_sources/: CMakeLists.txt  README.md
cmake_examples/using_target_sources/fonts/: CMakeLists.txt
cmake_examples/using_target_sources/rw/: CMakeLists.txt
cpp_examples/observer_pattern/: README.md
cpp_examples/observer_pattern/function_binding/: CMakeLists.txt  Observer.cpp  Observer.hpp  Subject.hpp  Subscriber.cpp  Subscriber.hpp  VideoChannel.cpp  VideoChannel.hpp  main.cpp
cpp_examples/observer_pattern/shared_from_this/: CMakeLists.txt  Observer.cpp  Observer.hpp  Subject.hpp  Subscriber.cpp  Subscriber.hpp  VideoChannel.cpp  VideoChannel.hpp  main.cpp
